[package]
name = "akatsuki-pp-py"
version = "0.9.8"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "akatsuki_pp_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module", "macros"] }
akatsuki-pp = { git = "https://github.com/osuokayu/akatsuki-pp-rs", rev = "de69179f40b8678a355606a1da9d1dcd5c6ba19f" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
