[package]
name = "akatsuki-pp-py"
version = "0.9.8"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "akatsuki_pp_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module", "macros"] }
akatsuki-pp = { git = "https://github.com/osuokayu/akatsuki-pp-rs", rev = "ef9a75b34d0338d37b7e5f71c4d13c5cf93af8fa" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
